--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,8 +9,7 @@
 // @import "./components/buttons";
 
 @import "./layout/header";
-@import "./layout/container";
-// @import "./layout/form";
+@import "./layout/footer";
 
 @import "./pages/location";
 @import "./pages/explore";
