--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,6 +4,7 @@ $colour-tertiary: #99e2d0;
 $colour-white: #fff;
 $colour-whitegrey: #f5f5f5;
 $colour-black: #000000;
+$colour-footer: #2f2f2f;
 $colour-invalid: #db464b;
 
 $colour-grey: #e7e7e7;
