--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,5 @@
 @import "./pages/explore";
 @import "./pages/how";
 @import "./pages/restaurants";
+@import "./pages/menu";
+@import "./pages/spinner";
