--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,6 +6,11 @@
   box-sizing: inherit;
 }
 
+a {
+  margin: 0px;
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
 html {
 }
 
