--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 1270px;
+  height: 1240px;
   width: 100%;
   background-color: $colour-whitegrey;
   &__title {
@@ -22,7 +22,7 @@
       display: flex;
       flex-direction: column;
       background-color: white;
-      margin: 10px;
+      margin: 10px 0px;
       width: 100%;
       height: 250px;
       border-radius: 20px;
@@ -61,8 +61,29 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          position: relative;
+          margin-right: 50px;
           &__logo {
-            width: 50px;
+            position: absolute;
+            left: -16px;
+            z-index: 1;
+            width: 55px;
+            transition: transform 450ms, background-color 300ms 150ms;
+            &:hover {
+              z-index: 0;
+            }
+          }
+          &__logo2 {
+            position: absolute;
+            color: white;
+            z-index: 0;
+            &:hover {
+              z-index: 1;
+              transition: color 1.5s ease;
+              color: $colour-primary;
+              -webkit-text-stroke-width: 1px;
+              -webkit-text-stroke-color: $colour-primary;
+            }
           }
         }
       }
