--- a/sass/pages/_location.scss
+++ b/sass/pages/_location.scss
@@ -8,10 +8,11 @@
   &__blockinfo {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 29%;
+    justify-content: center;
+    width: 40%;
   }
   &__text {
+    margin-left: 10px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 14px;
