--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -1,7 +1,7 @@
 .restaurants {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   height: 1240px;
   width: 100%;
   background-color: $colour-whitegrey;
@@ -10,6 +10,7 @@
     font-weight: 700;
     font-size: 26px;
     margin: 50px 20px 0px 20px;
+    align-self: flex-start;
   }
   &__blockinfo {
     display: flex;
@@ -27,6 +28,25 @@
       height: 250px;
       border-radius: 20px;
       box-shadow: 0 3px 8px -2px gray;
+      position: relative;
+      &__blocknew {
+        position: absolute;
+        top: 13px;
+        right: 13px;
+        width: 90px;
+        height: 35px;
+        background-color: #89deca;
+        border-radius: 3px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &__text {
+          font-family: "Roboto", sans-serif;
+          font-weight: 400;
+          font-size: 18px;
+          color: #007c5d;
+        }
+      }
       &__img {
         width: 100%;
         height: 70%;
