--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,9 +30,29 @@ body {
   box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.3);
   margin-bottom: 3px;
 }
+@media (min-width: 600px) {
+  .header {
+    height: 7rem;
+  }
+}
+@media (min-width: 801px) {
+  .header {
+    height: 8rem;
+  }
+}
+@media (min-width: 1025px) {
+  .header {
+    height: 10rem;
+  }
+}
 .header__logo {
   width: 50%;
   margin-top: 1rem;
+}
+@media (min-width: 600px) {
+  .header__logo {
+    width: 400px;
+  }
 }
 .header__active {
   background: #fff;
@@ -43,9 +63,29 @@ body {
   width: 100%;
   position: relative;
 }
+@media (min-width: 600px) {
+  .header__active {
+    height: 7rem;
+  }
+}
+@media (min-width: 801px) {
+  .header__active {
+    height: 8rem;
+  }
+}
+@media (min-width: 1025px) {
+  .header__active {
+    height: 10rem;
+  }
+}
 .header__active__logo {
   width: 50%;
   margin-top: 1rem;
+}
+@media (min-width: 600px) {
+  .header__active__logo {
+    width: 400px;
+  }
 }
 .header__active__logoarrow {
   position: absolute;
@@ -61,6 +101,11 @@ body {
   display: flex;
   justify-content: flex-start;
   width: 100%;
+}
+@media (min-width: 801px) {
+  .footer {
+    justify-content: center;
+  }
 }
 .footer__blockinfo {
   margin: 15px 0px 15px 15px;
@@ -80,12 +125,22 @@ body {
   font-size: 18px;
   margin-bottom: 15px;
 }
+@media (min-width: 801px) {
+  .footer__blockinfo__title {
+    font-size: 28px;
+  }
+}
 .footer__blockinfo__text {
   color: white;
   font-family: "Robot", sans-serif;
   font-weight: 400;
   font-size: 14px;
   margin: 5px 0px;
+}
+@media (min-width: 801px) {
+  .footer__blockinfo__text {
+    font-size: 18px;
+  }
 }
 
 .location {
@@ -95,6 +150,11 @@ body {
   text-align: center;
   background-color: #e7e7e7;
   height: 45px;
+}
+@media (min-width: 600px) {
+  .location {
+    height: 60px;
+  }
 }
 .location__blockinfo {
   display: flex;
@@ -107,6 +167,12 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
+}
+@media (min-width: 801px) {
+  .location__text {
+    font-size: 18px;
+    margin-left: 15px;
+  }
 }
 
 .explore {
@@ -162,6 +228,21 @@ body {
   display: flex;
   flex-direction: column;
   height: 460px;
+}
+@media (min-width: 801px) {
+  .how {
+    padding: 0px 80px;
+  }
+}
+@media (min-width: 1024px) {
+  .how {
+    padding: 0px 160px;
+  }
+}
+@media (min-width: 1400px) {
+  .how {
+    padding: 0px 300px;
+  }
 }
 .how__title {
   font-family: "Roboto", sans-serif;
@@ -316,6 +397,21 @@ body {
   width: 100%;
   background-color: #f5f5f5;
 }
+@media (min-width: 801px) {
+  .restaurants {
+    padding: 0px 80px;
+  }
+}
+@media (min-width: 1024px) {
+  .restaurants {
+    padding: 0px 160px;
+  }
+}
+@media (min-width: 1400px) {
+  .restaurants {
+    padding: 0px 300px;
+  }
+}
 .restaurants__title {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
@@ -426,6 +522,11 @@ body {
   height: 200px;
   width: 100%;
 }
+@media (min-width: 1024px) {
+  .photo {
+    height: 323px;
+  }
+}
 
 .menucontainer {
   height: 100%;
@@ -442,6 +543,16 @@ body {
   position: absolute;
   top: 230px;
 }
+@media (min-width: 801px) {
+  .menu {
+    top: 290px;
+  }
+}
+@media (min-width: 1024px) {
+  .menu {
+    top: 340px;
+  }
+}
 .menu__blockrestaurantname {
   display: flex;
   justify-content: space-between;
@@ -449,14 +560,70 @@ body {
   width: 100%;
   height: 70px;
   margin: 15px 0px;
+  position: relative;
+}
+@media (min-width: 801px) {
+  .menu__blockrestaurantname {
+    padding: 0px 80px;
+  }
+}
+@media (min-width: 1024px) {
+  .menu__blockrestaurantname {
+    padding: 0px 160px;
+  }
+}
+@media (min-width: 1400px) {
+  .menu__blockrestaurantname {
+    padding: 0px 300px;
+  }
 }
 .menu__blockrestaurantname__title {
   font-family: "Shrikhand", cursive;
   font-size: 22px;
   margin: 0px 0px 0px 20px;
 }
-.menu__blockrestaurantname__logo {
-  margin: 0px 30px 0px 20px;
+@media (min-width: 801px) {
+  .menu__blockrestaurantname__title {
+    font-size: 26px;
+  }
+}
+@media (min-width: 1024px) {
+  .menu__blockrestaurantname__title {
+    font-size: 32px;
+  }
+}
+@media (min-width: 1400px) {
+  .menu__blockrestaurantname__title {
+    font-size: 36px;
+  }
+}
+.menu__blockrestaurantname__blocklogo {
+  display: flex;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.menu__blockrestaurantname__blocklogo__logo {
+  position: absolute;
+  left: 39px;
+  z-index: 1;
+  transition: transform 450ms, background-color 300ms 150ms;
+}
+.menu__blockrestaurantname__blocklogo__logo:hover {
+  z-index: 0;
+}
+.menu__blockrestaurantname__blocklogo__logo2 {
+  position: absolute;
+  color: white;
+  z-index: 0;
+}
+.menu__blockrestaurantname__blocklogo__logo2:hover {
+  z-index: 1;
+  transition: color 1.5s ease;
+  color: #9356cd;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #9356cd;
 }
 .menu__carte {
   display: flex;
@@ -464,6 +631,21 @@ body {
   justify-content: center;
   margin: 10px;
   width: calc(100% - 20px);
+}
+@media (min-width: 801px) {
+  .menu__carte {
+    padding: 0px 80px;
+  }
+}
+@media (min-width: 1024px) {
+  .menu__carte {
+    padding: 0px 160px;
+  }
+}
+@media (min-width: 1400px) {
+  .menu__carte {
+    padding: 0px 300px;
+  }
 }
 .menu__carte__blockentrees {
   display: flex;
@@ -578,6 +760,21 @@ body {
   justify-content: center;
   align-items: center;
   margin: 20px 0px;
+}
+@media (min-width: 801px) {
+  .menu__order {
+    padding: 0px 80px;
+  }
+}
+@media (min-width: 1024px) {
+  .menu__order {
+    padding: 0px 160px;
+  }
+}
+@media (min-width: 1400px) {
+  .menu__order {
+    padding: 0px 300px;
+  }
 }
 
 @keyframes rotation {
