--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,9 @@
   display: flex;
   justify-content: flex-start;
   width: 100%;
+  @media (min-width: 801px) {
+    justify-content: center;
+  }
   &__blockinfo {
     margin: 15px 0px 15px 15px;
     &__blocklogo {
@@ -20,6 +23,9 @@
       font-weight: 200;
       font-size: 18px;
       margin-bottom: 15px;
+      @media (min-width: 801px) {
+        font-size: 28px;
+      }
     }
     &__text {
       color: white;
@@ -27,6 +33,9 @@
       font-weight: 400;
       font-size: 14px;
       margin: 5px 0px;
+      @media (min-width: 801px) {
+        font-size: 18px;
+      }
     }
   }
 }
