--- a/sass/pages/_how.scss
+++ b/sass/pages/_how.scss
@@ -2,6 +2,15 @@
   display: flex;
   flex-direction: column;
   height: 460px;
+  @media (min-width: 801px) {
+    padding: 0px 80px;
+  }
+  @media (min-width: 1024px) {
+    padding: 0px 160px;
+  }
+  @media (min-width: 1400px) {
+    padding: 0px 300px;
+  }
   &__title {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -146,4 +155,13 @@
       }
     }
   }
+}
+
+@media (min-width: 600px) {
+}
+@media (min-width: 801px) {
+}
+@media (min-width: 1025px) {
+}
+@media (min-width: 1281px) {
 }
