--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -2,6 +2,9 @@
   object-fit: cover;
   height: 200px;
   width: 100%;
+  @media (min-width: 1024px) {
+    height: 323px;
+  }
 }
 
 .menucontainer {
@@ -18,6 +21,12 @@
   border-top-right-radius: 30px;
   position: absolute;
   top: 230px;
+  @media (min-width: 801px) {
+    top: 290px;
+  }
+  @media (min-width: 1024px) {
+    top: 340px;
+  }
   &__blockrestaurantname {
     display: flex;
     justify-content: space-between;
@@ -25,13 +34,57 @@
     width: 100%;
     height: 70px;
     margin: 15px 0px;
+    position: relative;
+    @media (min-width: 801px) {
+      padding: 0px 80px;
+    }
+    @media (min-width: 1024px) {
+      padding: 0px 160px;
+    }
+    @media (min-width: 1400px) {
+      padding: 0px 300px;
+    }
     &__title {
       font-family: "Shrikhand", cursive;
       font-size: 22px;
       margin: 0px 0px 0px 20px;
+      @media (min-width: 801px) {
+        font-size: 26px;
+      }
+      @media (min-width: 1024px) {
+        font-size: 32px;
+      }
+      @media (min-width: 1400px) {
+        font-size: 36px;
+      }
     }
-    &__logo {
-      margin: 0px 30px 0px 20px;
+    &__blocklogo {
+      display: flex;
+      width: 100px;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      &__logo {
+        position: absolute;
+        left: 39px;
+        z-index: 1;
+        transition: transform 450ms, background-color 300ms 150ms;
+        &:hover {
+          z-index: 0;
+        }
+      }
+      &__logo2 {
+        position: absolute;
+        color: white;
+        z-index: 0;
+        &:hover {
+          z-index: 1;
+          transition: color 1.5s ease;
+          color: $colour-primary;
+          -webkit-text-stroke-width: 2px;
+          -webkit-text-stroke-color: $colour-primary;
+        }
+      }
     }
   }
   &__carte {
@@ -40,6 +93,15 @@
     justify-content: center;
     margin: 10px;
     width: calc(100% - 20px);
+    @media (min-width: 801px) {
+      padding: 0px 80px;
+    }
+    @media (min-width: 1024px) {
+      padding: 0px 160px;
+    }
+    @media (min-width: 1400px) {
+      padding: 0px 300px;
+    }
     &__blockentrees {
       display: flex;
       flex-direction: column;
@@ -158,6 +220,15 @@
     justify-content: center;
     align-items: center;
     margin: 20px 0px;
+    @media (min-width: 801px) {
+      padding: 0px 80px;
+    }
+    @media (min-width: 1024px) {
+      padding: 0px 160px;
+    }
+    @media (min-width: 1400px) {
+      padding: 0px 300px;
+    }
   }
 }
 
