--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -5,6 +5,15 @@
   height: 1240px;
   width: 100%;
   background-color: $colour-whitegrey;
+  @media (min-width: 801px) {
+    padding: 0px 80px;
+  }
+  @media (min-width: 1024px) {
+    padding: 0px 160px;
+  }
+  @media (min-width: 1400px) {
+    padding: 0px 300px;
+  }
   &__title {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
